# fominyh_website

./: .coveragerc  .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
backend/: .env.example  .flake8  README.md  pyproject.toml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 0a350163f3d0_add_admin_fields_to_booking.py  0cb5d6658e52_add_booking_status.py  18fb1350f9aa_add_salon_settings.py  1f9972580cf7_initial_schema.py  2c3e30f89566_add_user_id_to_bookings.py  3053bbff7929_message.py  395203c49219_remove_legacy_auth_fields_from_users.py  39696ebe0307_add_reserves_table.py  40c886012c21_update_user_model.py  43d8565f965d_add_confirmed_booking_status.py  5c8390c7eb7a_add_category_image_benefits_to_services.py  606ab43723c2_make_card_number_nullable.py  68531e1ddfdc_init.py  75ca8f3d2a15_add_booking_status_and_reminders.py  766a998df781_initial_schema.py  7d6044ef40e5_add_salon_settings_table.py  85335aa27fa7_rename_slot_minutes_to_interval_minutes.py  8a8e770ac1ff_add_avatar_url_to_users.py  8db48134ba7d_initial_schema.py  97a34d893200_initial_schema.py  9f2428f77b29_add_telegram_chat_id_to_users.py  9f6aafaa18eb_add_verification_tokens.py  a63e8b75a689_add_guest_fields_to_booking.py  ab5daac5ef0e_add_auth_fields_to_users.py  (+7 more)
backend/app/: __init__.py  main.py  startup.py
backend/scripts/: reset_webhook.py
backend/tests/: conftest.py  test_admin_auth.py  test_admin_services.py  test_booking_cancel.py  test_booking_create.py  test_booking_double.py  test_booking_slots.py  test_services.py
(+125 files in other folders)
