[tool.poetry]
name = "fominyh-website"
version = "0.1.0"
description = ""
authors = ["Artem"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic-settings = "^2.6.0"
alembic = "^1.17.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
